--- a/public/css/login.css
+++ b/public/css/login.css
@@ -94,8 +94,8 @@
 [ RESTYLE TAG ]*/
 
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -106,11 +106,11 @@ body, html {
 
 /*---------------------------------------------*/
 a {
-    font-family: Poppins-Regular;
+    font-family: Poppins-Regular, serif;
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
-    margin: 0px;
+    margin: 0;
     transition: all 0.4s;
     -webkit-transition: all 0.4s;
     -o-transition: all 0.4s;
@@ -132,19 +132,19 @@ a:hover {
 
 /*---------------------------------------------*/
 h1,h2,h3,h4,h5,h6 {
-    margin: 0px;
+    margin: 0;
 }
 
 p {
-    font-family: Poppins-Regular;
+    font-family: Poppins-Regular, serif;
     font-size: 14px;
     line-height: 1.7;
     color: #666666;
-    margin: 0px;
+    margin: 0;
 }
 
 ul, li {
-    margin: 0px;
+    margin: 0;
     list-style-type: none;
 }
 
@@ -203,14 +203,14 @@ iframe {
 /*//////////////////////////////////////////////////////////////////
 [ Utility ]*/
 .txt1 {
-    font-family: Poppins-Regular;
+    font-family: Poppins-Regular, serif;
     font-size: 13px;
     color: #666666;
     line-height: 1.5;
 }
 
 .txt2 {
-    font-family: Poppins-Regular;
+    font-family: Poppins-Regular, serif;
     font-size: 13px;
     color: #333333;
     line-height: 1.5;
@@ -218,11 +218,6 @@ iframe {
 
 /*//////////////////////////////////////////////////////////////////
 [ login ]*/
-
-.limiter {
-    width: 100%;
-    margin: 0 auto;
-}
 
 .container-login100 {
     width: 100%;
@@ -246,10 +241,10 @@ iframe {
     overflow: hidden;
     padding: 77px 55px 33px 55px;
 
-    box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
-    -moz-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
-    -webkit-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
-    -o-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
+    -o-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.1);
     -ms-box-shadow: 0 5px 10px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -263,7 +258,7 @@ iframe {
 
 .login100-form-title {
     display: block;
-    font-family: Poppins-Bold;
+    font-family: Poppins-Bold, serif;
     font-size: 30px;
     color: #333333;
     line-height: 1.2;
@@ -284,7 +279,7 @@ iframe {
 }
 
 .input100 {
-    font-family: Poppins-Regular;
+    font-family: Poppins-Regular, serif;
     font-size: 15px;
     color: #555555;
     line-height: 1.2;
@@ -329,7 +324,7 @@ iframe {
 }
 
 .focus-input100::after {
-    font-family: Poppins-Regular;
+    font-family: Poppins-Regular, serif;
     font-size: 15px;
     color: #999999;
     line-height: 1.2;
@@ -339,7 +334,7 @@ iframe {
     width: 100%;
     position: absolute;
     top: 16px;
-    left: 0px;
+    left: 0;
     padding-left: 5px;
 
     -webkit-transition: all 0.4s;
@@ -448,7 +443,7 @@ iframe {
 }
 
 .login100-form-btn {
-    font-family: Poppins-Medium;
+    font-family: Poppins-Medium, serif;
     font-size: 15px;
     color: #fff;
     line-height: 1.2;
@@ -506,7 +501,7 @@ iframe {
     right: 0px;
     pointer-events: none;
 
-    font-family: Poppins-Regular;
+    font-family: Poppins-Regular, serif;
     color: #c80000;
     font-size: 13px;
     line-height: 1.4;
@@ -523,7 +518,7 @@ iframe {
 
 .alert-validate::after {
     content: "\f06a";
-    font-family: FontAwesome;
+    font-family: FontAwesome, serif;
     font-size: 16px;
     color: #c80000;
 
