--- a/templates/security/signin.html.twig
+++ b/templates/security/signin.html.twig
@@ -9,22 +9,27 @@
     <div class="container-login100">
         <div class="wrap-login100">
             <form method="post" class="login100-form login100-validate-form">
-                {% if error %}
-                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                {% endif %}
-
-                {% if app.user %}
-                    <div class="mb-3">
-                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                    </div>
-                {% endif %}
-
                 <span class="login100-form-title p-b-26">Welcome</span>
                 <span class="login100-form-title p-b-48">
                 <i class="zmdi zmdi-font"></i></span>
-                <div class="wrap-input100 validate-input" data-validate="Enter Login">
+                <div class="wrap-input100 validate-input" data-validate="Enter Firstname">
                     <label>
-                        <input class="input100" type="text" name="login" value="{{ last_username }}" placeholder="Login">
+                        <input class="input100" type="text" name="firstname" placeholder="Firstname">
+                    </label>
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter Lastname">
+                    <label>
+                        <input class="input100" type="text" name="lastname" placeholder="Lastname">
+                    </label>
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter Mail">
+                    <label>
+                        <input class="input100" type="text" name="Mail" placeholder="Mail">
+                    </label>
+                </div>
+                <div class="wrap-input100 validate-input" data-validate="Enter login">
+                    <label>
+                        <input class="input100" type="text" name="login" placeholder="Login">
                     </label>
                 </div>
                 <div class="wrap-input100 validate-input" data-validate="Correct password is 6 caracter length">
@@ -35,25 +40,21 @@
                         <input class="input100" type="password" name="pass" placeholder="Password">
                     </label>
                 </div>
+                <div class="wrap-input100 validate-input" data-validate="Correct password is 6 caracter length">
+                <span class="btn-show-pass">
+                <i class="zmdi zmdi-eye"></i>
+                </span>
+                    <label>
+                        <input class="input100" type="password" name="pass2" placeholder="Password Verification">
+                    </label>
+                </div>
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
                         <button class="login100-form-btn">
-                            Authentification
+                           Inscription
                         </button>
                     </div>
-                </div>
-                <label class="text-center p-t-115">
-                    <input type="checkbox" name="_remember_me" checked  class="txt1">
-                    Keep me logged in
-                </label>
-                <div class="text-center p-t-115">
-                    <span class="txt1">
-                    Don’t have an account?
-                    </span>
-                    <a class="txt2" href="{{ path('app_signin') }}">
-                        Sign Up
-                    </a>
                 </div>
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
             </form>
