Configuration des opérations API Platform terminée

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="css/login.css">
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/login.css') }}">
 {% endblock %}
 {% block body %}
     <div class="container-login100">
